Fix alignment and sizes

--- a/ui/components/app/signature-request-original/signature-request-original-warning/index.scss
+++ b/ui/components/app/signature-request-original/signature-request-original-warning/index.scss
@@ -2,6 +2,7 @@
   &__content {
     &__header {
       border-bottom: 1px solid var(--color-border-muted);
+      align-items: center;
 
       &__warning-icon {
         padding-top: 7px;
